--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -419,6 +419,12 @@ form.form-count {
     }
 }
 
+@media (max-width: 1024px) {
+    main section article {
+        min-height: auto;
+    }
+}
+
 @media (max-width: 960px) {
     form.form-count {
         width: 80%;
